Добавлен пример switch-rule и сборка проекта с ключом --enable-preview